# sxe

./: .clang-format  .ctags  .gitignore  .gitmodules  CMakeLists.txt  COPYING  Doxyfile  Makefile  NOTES  NOTICE  README  README.md  TODO  bootstrap.cmd  bootstrap.sh  build.gradle  configure.cmd  configure.sh  envsetup.cmd  envsetup.project.cmd  envsetup.project.sh  envsetup.sh  make.cmd  ngen.json  pom.xml  run.cmd  run.sh  settings.gradle  setup.cmd  tags
.cmd/: ci.cmd  (+17 more)
core/: .gitignore  CMakeLists.txt  build.gradle  ngen.json  pom.xml
core/include/sxe/: cxxversion.hpp  dllexport.hpp  dllimport.hpp  logging.hpp  stdheaders.hpp
core/include/sxe/core/: Game.hpp  GameEngine.hpp  RateCounter.hpp
core/src/: Game.cpp  GameEngine.cpp  RateCounter.cpp
core/src/common/: Subsystem.cpp  Utils.cpp
core/src/config/: Settings.cpp  SettingsFile.cpp  SettingsMap.cpp  SettingsXMLFile.cpp
core/src/graphics/: Display.cpp  DisplayMode.cpp  FrameEndedListener.cpp  FrameStartedListener.cpp
core/src/input/: InputCode.cpp  InputManager.cpp  KeyEvent.cpp
core/src/logging/: Log.cpp  LogSink.cpp
core/src/sys/: FileSystem.cpp  Platform.cpp  Xdg.cpp
core/src/test/resources/: PathLoader.txt  PathResourceLoader.txt  SettingsFile.properties  SettingsXMLFile.xml  VertexVertexMesh.txt
core/src/testing/: NullConfiguration.cpp  NullDisplay.cpp  NullInputManager.cpp
demos/diagterm/: CMakeLists.txt  build.gradle  diagterm.cfg  ngen.json
demos/diagterm/src/: GameStub.cpp  GameStub.hpp  main.cpp
demos/nulldemo/: CMakeLists.txt  NullDemo.cfg  ngen.json
demos/nulldemo/android/: build.gradle
demos/nulldemo/lib/: build.gradle
demos/nulldemo/pc/: build.gradle
demos/nulldemo/src/: CMakeLists.txt  NullDemo.cpp  NullDemo.h  main.cpp
demos/quad/: CMakeLists.txt  QuadGame.cfg  ngen.json
demos/quad/lib/: build.gradle
demos/quad/pc/: build.gradle
demos/quad/src/: CMakeLists.txt  Quad.cpp  Quad.h  QuadGame.cpp  QuadGame.h  main.cpp
demos/rockblaster/: CMakeLists.txt  RockBlasterGame.cfg
demos/rockblaster/content/: bigrock.mesh  player.mesh
demos/rockblaster/src/: GameObject.cpp  GameObject.h  Player.cpp  Player.h  Rock.cpp  Rock.h  RockBlasterGame.cpp  RockBlasterGame.h  main.cpp
docs/: Build.md  CMakeLists.txt  Linux.md  Settings.md  Windows.md  making-a-game.txt  porting.txt  resources-system.txt
sxe/: CMakeLists.txt  SxEConfig.cmake.in  config.hpp.in  ngen.json
sxe/glsl/: VertexBufferTechnique.frag  VertexBufferTechnique.vert
sxe/include/sxe/: Console.hpp  Game.hpp  GameEngine.hpp  RateCounter.hpp  api.hpp  dllexport.hpp  filesystem.hpp  haveboost.hpp  logging.hpp  stdheaders.hpp
sxe/src/: Console.cpp  Game.cpp  GameEngine.cpp  RateCounter.cpp
sxe/src/cmds/: Command.cpp  EchoCommand.cpp  QuitCommand.cpp  SetCommand.cpp
sxe/src/common/: Subsystem.cpp  Utils.cpp
sxe/src/config/: Settings.cpp  SettingsAdapter.cpp  SettingsEnvironment.cpp  SettingsExpander.cpp  SettingsFile.cpp  SettingsListener.cpp  SettingsMap.cpp  SettingsXMLFile.cpp
sxe/src/gl/: BufferObject.cpp  BufferObjectPool.cpp  FragmentShader.cpp  ImmediateModeTechnique.cpp  OpenGLVersion.cpp  Program.cpp  Shader.cpp  VertexArrayTechnique.cpp  VertexBufferObject.cpp  VertexBufferTechnique.cpp  VertexShader.cpp
sxe/src/graphics/: Display.cpp  DisplayManager.cpp  DisplayMode.cpp  DrawingTechnique.cpp  FrameEndedListener.cpp  FrameStartedListener.cpp  GraphicsFacet.cpp  MemoryBuffer.cpp  MemoryPool.cpp  MemorySegment.cpp  RenderableObject.cpp  ShaderType.cpp  Sprite.cpp  SystemMemory.cpp  SystemMemoryPool.cpp  VertexVertexMesh.cpp
sxe/src/input/: ConsoleInputManager.cpp  InputCode.cpp  InputFacet.cpp  InputManager.cpp  KeyEvent.cpp
sxe/src/logging/: Log.cpp  LogSink.cpp  LoggingManager.cpp  RateCounter.cpp
sxe/src/pc/: PcConfiguration.cpp  PcDisplay.cpp  PcDisplayManager.cpp  PcInputManager.cpp
sxe/src/resource/: ResourceFacet.cpp  ResourceHandle.cpp  ResourceManager.cpp
sxe/src/scene/: Camera.cpp  Entity.cpp  SceneManager.cpp
sxe/src/sum/: Adler32.cpp  CRC32.cpp  Checksum.cpp
sxe/src/sys/: FileSystem.cpp  Platform.cpp  Xdg.cpp
sxe/src/testing/: NullConfiguration.cpp  NullDisplay.cpp  NullDisplayManager.cpp  NullInputManager.cpp
sxe/src/vk/: Vulkan.cpp
tests/: CMakeLists.txt  main.cpp  ngen.json
tests/cmds/: CommandTest.cpp  CommandTest.hpp
tests/common/: NotificationManagerTest.cpp  NotificationManagerTest.hpp  SubsystemTest.cpp  SubsystemTest.hpp  UtilsTest.cpp  UtilsTest.hpp
tests/config/: SettingsAdapterTest.cpp  SettingsAdapterTest.hpp  SettingsEnvironmentTest.cpp  SettingsEnvironmentTest.hpp  SettingsExpanderTest.cpp  SettingsExpanderTest.hpp  SettingsFileTest.cpp  SettingsFileTest.hpp  SettingsFixture.cpp  SettingsFixture.hpp  SettingsListenerTest.cpp  SettingsListenerTest.hpp  SettingsMapTest.cpp  SettingsMapTest.hpp  SettingsXMLFileTest.cpp  SettingsXMLFileTest.hpp
tests/core/common/: NotificationManagerTest.cpp  NotificationManagerTest.hpp  SubsystemTest.cpp  SubsystemTest.hpp
tests/core/config/: SettingsFileTest.cpp  SettingsFileTest.hpp  SettingsFixture.cpp  SettingsFixture.hpp  SettingsMapTest.cpp  SettingsMapTest.hpp  SettingsXMLFileTest.cpp  SettingsXMLFileTest.hpp
tests/core/graphics/: DisplayModeTest.cpp  DisplayModeTest.hpp
tests/core/input/: InputCodeTest.cpp  InputCodeTest.hpp  InputManagerTest.cpp  InputManagerTest.hpp
tests/core/sys/: PlatformTest.cpp  PlatformTest.hpp  XdgTest.cpp  XdgTest.hpp
tests/graphics/: DisplayModeTest.cpp  DisplayModeTest.hpp  MemoryBufferFixture.hpp  MemoryPoolFixture.hpp  RectangleTest.cpp  RectangleTest.hpp  SystemMemoryPoolTest.cpp  SystemMemoryPoolTest.hpp  SystemMemoryTest.cpp  SystemMemoryTest.hpp  VertexVertexMeshTest.cpp  VertexVertexMeshTest.hpp
tests/input/: InputCodeTest.cpp  InputCodeTest.hpp  InputFacetTest.cpp  InputFacetTest.hpp  InputManagerTest.cpp  InputManagerTest.hpp
tests/resource/: ArchiveStreamTest.cpp  ArchiveStreamTest.hpp
tests/sum/: Adler32Test.cpp  Adler32Test.hpp  CRC32Test.cpp  CRC32Test.hpp  ChecksumFixture.hpp
tests/sys/: PlatformTest.cpp  PlatformTest.hpp  XdgTest.cpp  XdgTest.hpp
(+512 files in other folders)
